--- a/sass/components/information/_information.scss
+++ b/sass/components/information/_information.scss
@@ -88,6 +88,8 @@
     }
 
     .storage-condition {
+                margin-left: 21px;
+        width: 354px;
         font-family: "Montserrat", sans-serif;
         font-size: 18px;
         line-height: 24px;
