--- a/sass/components/_bestsaller.scss
+++ b/sass/components/_bestsaller.scss
@@ -94,6 +94,10 @@
     text-shadow: 3px 3px 3px 3px #705A66;
 }
 
+.bestsaller-dots-name{
+    display: none;
+}
+
 
 // телефон
 
@@ -109,24 +113,35 @@
     }
 
     .bestsaller-img {
-        width: 340px;
+        width: 308px;
+    }
+
+    .bestsaller-photo-hiden {
+        display: none;
     }
 
     .bestsaller-arrows {
+        z-index: 5;
+        margin-left: 3px;
+        margin-top: 949px;
+        position: absolute;
         display: flex;
         align-items: flex-end;
         justify-content: flex-end;
-        gap: 32px;
+        gap: 157px;
         margin-right: 50px;
     }
 
     .bestsaller-name {
+        flex-direction: column;
         display: flex;
         justify-content: space-around;
         gap: 32px;
     }
 
     .bestsaller-photo {
+        width: 302px;
+        margin-left: -35px;
         list-style: none;
     }
 
@@ -171,7 +186,7 @@
         color: #705A66;
         font-size: 24px;
         background-color: #F5EEE0;
-        padding: 20px 80px;
+        padding: 20px 20px;
         border-radius: 10px;
         margin-top: 82px;
         text-decoration: none;
@@ -183,6 +198,8 @@
     }
 
     .bestsaller-button-link {
+        margin-left: 7px;
+        width: 300px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -192,5 +209,13 @@
         text-decoration: none;
         font-weight: 900;
         text-shadow: 3px 3px 3px 3px #705A66;
+    }
+
+    .bestsaller-dots-name{
+        margin-left: 72px;
+        display: flex;
+        list-style: none;
+        gap: 16px;
+        margin-top: 31px;
     }
 }
