--- a/sass/components/_delivery.scss
+++ b/sass/components/_delivery.scss
@@ -90,6 +90,8 @@
     }
 
     .delivery-name {
+        margin-left: -480px;
+        flex-direction: column;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -118,8 +120,8 @@
     .delivery-description {
         font-family: "Montserrat", sans-serif;
         color: #705A66;
-        font-size: 18px;
-        line-height: 24px;
+        font-size: 15px;
+        line-height: 22px;
         text-align: center;
 
     }
