--- a/sass/components/_grann.scss
+++ b/sass/components/_grann.scss
@@ -58,6 +58,9 @@
      //  width: 500px;
  }
 
+ .grann-img-down {
+     display: none;
+ }
 
  .grann-custom-shape-divider-top-1759830817 {
      margin-top: -1px;
@@ -95,7 +98,7 @@
 
 
      .grann-photo {
-         display: flex;
+         display: none;
          align-items: center;
          justify-content: center;
          margin-left: 305px;
@@ -106,36 +109,46 @@
          font-family: "Montserrat", sans-serif;
          color: #705A66;
          line-height: 32px;
-         font-size: 24px;
+         font-size: 21px;
          text-align: center;
      }
 
      .grann-main {
          width: 287px;
-         margin-top: 204px;
-         margin-left: 124px;
+         margin-top: -53px;
+         margin-left: 17px;
          text-align: center;
      }
 
      .grann-text-down {
          font-family: "Montserrat", sans-serif;
-         line-height: 24px;
-         font-size: 18px;
+         line-height: 22px;
+         font-size: 16px;
          color: #705A66;
          text-align: center;
      }
 
      .grann-text-order {
-         width: 393px;
-         margin-top: -424px;
-         margin-left: 819px;
+         width: 300px;
+         margin-top: 18px;
+         margin-left: 7px;
          text-align: center;
      }
 
+     .grann-img-down-phone {
+         display: none;
+     }
+
+     .grann-img-down {
+         margin-left: 3px;
+         width: 306px;
+         display: block;
+     }
+
      .grann-text-weight {
-         width: 499px;
-         margin-left: 361px;
-         margin-top: 88px;
+         width: 300px;
+         margin-left: 9px;
+         margin-top: 26px;
          text-align: center;
      }
 
@@ -168,5 +181,10 @@
 
      .grann-custom-shape-divider-top-1759830817 .grann-shape-fill {
          fill: #F5EEE0;
+     }
+
+     .grann-phone {
+         display: flex;
+         flex-direction: column;
      }
  }
