--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -95,6 +95,38 @@
     fill: #F5EEE0;
 }
 
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 87vw;
+    height: 100vh;
+    padding: 32px;
+    background-color: #705A66;
+    z-index: 999;
+    visibility: hidden;
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.page-header-phone {
+    height: 145px;
+    background-color: #F5EEE0;
+    margin-bottom: -7px;
+    display: none;
+}
+
+.main-title-phone {
+    font-family: Montserrat, sans-serif;
+    color: rgb(112, 90, 102);
+    text-align: center;
+    font-size: 100px;
+    line-height: 110px;
+    font-weight: 600;
+    margin-top: 0px;
+    display: none;
+}
+
 
 // телефон
 
@@ -108,7 +140,26 @@
 
     }
 
+    .main-title-phone {
+        font-family: Montserrat, sans-serif;
+        color: rgb(112, 90, 102);
+        text-align: center;
+        font-size: 68px;
+        line-height: 110px;
+        font-weight: 600;
+        margin-top: 0px;
+        display: block;
+    }
+
+    .page-header-phone {
+        height: 160px;
+        background-color: #F5EEE0;
+        margin-bottom: -7px;
+        display: block;
+    }
+
     .container-main {
+        margin-top: 25px;
         height: 888px;
     }
 
@@ -183,6 +234,7 @@
         visibility: hidden;
     }
 
+
     .main-description-social {
         font-family: "Montserrat", sans-serif;
         color: #705A66;
@@ -214,19 +266,58 @@
     .custom-shape-divider-top-1759830817 .shape-fill {
         fill: #F5EEE0;
     }
+
+    .phone-img {
+        margin-top: 51px;
+        margin-left: 115px;
+    }
+
+    .icon-phone {
+        margin-bottom: 12px;
+        margin-left: 67px;
+        width: 25px;
+        fill: #705A66;
+    }
+
+    .page-header {
+        height: 119px;
+        background-color: #F5EEE0;
+        margin-bottom: -7px;
+        // box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
+        //     0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+    }
+
+    .menu-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 87vw;
+        height: 100vh;
+        padding: 32px;
+        background-color: #705A66;
+        z-index: 999;
+        visibility: visible;
+        transform: translateX(100%);
+        transition: transform 250ms ease-in-out;
+    }
 }
 
 
 .page-header {
-    box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
-        0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+    height: 119px;
+    background-color: #F5EEE0;
+    margin-bottom: -7px;
 }
 
 @media (max-width: 767px) {
     .menu {
-        display: none;
+        visibility: hidden;
+        margin-top: -202px;
     }
 }
+
+
+
 
 .menu .link {
     padding: 10px;
@@ -240,13 +331,14 @@
 }
 
 .menu-toggle {
+    color: #705A66;
+    position: absolute;
     min-height: 40px;
     min-width: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
-
-    margin: 0;
+    margin-left: 226px;
     padding: 0;
     background-color: transparent;
     cursor: pointer;
@@ -255,10 +347,14 @@
     outline: none;
 }
 
+.js-open-menu {
+    margin-top: -60px;
+}
+
 @media (min-width: 768px) {
-    .menu-toggle {
-        display: none;
-    }
+    // .menu-toggle {
+    //     // display: none;
+    // }
 }
 
 .menu-toggle:hover,
@@ -273,9 +369,9 @@
     width: 87vw;
     height: 100vh;
     padding: 32px;
-    background-color: #3f51b5;
+    background-color: #705A66;
     z-index: 999;
-
+    // overflow: hidden;
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
 }
@@ -285,13 +381,17 @@
 }
 
 .menu-container .menu-toggle {
+
     position: absolute;
     top: 16px;
-    right: 16px;
+    right: 141px;
     color: #fff;
 }
 
 .mobile-menu {
+    font-family: "Montserrat", sans-serif;
+    line-height: 18px;
+    font-size: 24px;
     padding: 0;
     margin: 0;
     list-style: none;
@@ -302,4 +402,12 @@
     padding: 10px;
     color: #fff;
     text-decoration: none;
+}
+
+.menu-img-phone {
+    margin-top: 11px;
+    margin-left: -358px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
