--- a/sass/components/_register.scss
+++ b/sass/components/_register.scss
@@ -1,42 +1,63 @@
+.register {
+    background-image: url("../../img/register/bg-section-register.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 565px;
+}
+
 .register-photo-text {
-    position: absolute;
-    padding-top: 80px;
-    margin-top: -573px;
-    padding-left: 100px;
+    padding-top: 0px;
+    padding-left: 27px;
 }
 
 .register-text {
     font-family: "Montserrat", sans-serif;
-    position: absolute;
-    margin-top: -557px;
-    padding-top: 280px;
-    padding-left: 100px;
+    padding-top: 0px;
     color: #F5F7F8;
     line-height: 24px;
     font-size: 18px;
     width: 393px;
 }
 
+.register-photo-title {
+    margin-top: 80px;
+    margin-left: 80px;
+    height: 300px;
+    width: 500px;
+}
+
 
 // телефон
 
 @media screen and (max-width: 768px) {
+    .register {
+        background-image: url("../../img/register/bg-section-register.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 810px
+    }
+
     .register-photo-text {
-        position: absolute;
+        width: 310px;
         padding-top: 80px;
-        margin-top: -573px;
-        padding-left: 100px;
+        padding-left: 79px;
     }
 
     .register-text {
         font-family: "Montserrat", sans-serif;
-        position: absolute;
-        margin-top: -557px;
+        margin-top: -263px;
         padding-top: 280px;
-        padding-left: 100px;
+        padding-left: 84px;
         color: #F5F7F8;
-        line-height: 24px;
-        font-size: 18px;
-        width: 393px;
+        line-height: 22px;
+        font-size: 16px;
+        width: 322px;
+    }
+
+    .register-photo-title {
+        margin-top: -74px;
+        margin-left: -78px;
+        height: 403px;
+        width: 500px;
     }
 }
