--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -269,12 +269,12 @@
 
     .phone-img {
         margin-top: 51px;
-        margin-left: 115px;
+        margin-left: 174px;
     }
 
     .icon-phone {
         margin-bottom: 12px;
-        margin-left: 67px;
+        margin-left: 133px;
         width: 25px;
         fill: #705A66;
     }
@@ -348,6 +348,7 @@
 }
 
 .js-open-menu {
+    right: 40px;
     margin-top: -60px;
 }
 
