--- a/sass/components/product/_napoleon.scss
+++ b/sass/components/product/_napoleon.scss
@@ -1,9 +1,11 @@
 .switch {
     display: flex;
     list-style: none;
+    gap: 25px;
 }
 
 .product-switch {
+    margin-left: 4px;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
     color: #705A66;
@@ -23,7 +25,7 @@
 }
 
 .product-order {
-    width: 355px;
+    // width: 355px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -226,7 +228,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-left: 32px;
+        width: 409px;
     }
 
     .container-product {
@@ -278,6 +280,8 @@
     }
 
     .product-btn-order {
+        height: 73px;
+        width: 287px;
         font-family: "Montserrat", sans-serif;
         line-height: 32px;
         font-size: 24px;
@@ -289,10 +293,11 @@
     }
 
     .product-order-text {
+        flex-direction: column;
         display: flex;
         width: 518px;
         margin-top: 48px;
-        margin-left: 148px;
+        margin-left: 44px;
         align-items: center;
     }
 
@@ -308,7 +313,13 @@
         font-family: "Montserrat", sans-serif;
         font-size: 24px;
         color: #705A66;
-        margin-left: -140px;
+        margin-left: 0px;
+    }
+
+    .product-text-sale-phone {
+        display: flex;
+        align-items: center;
+        gap: 16px;
     }
 
 
